<resources>
    <string name="app_name">Finme</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_there">Hello There!</string>
    <string name="not_registered">Not registered?</string>
    <string name="create_account">Create account</string>
    <string name="hi_user">Hai!</string>
    <string name="user">User</string>
    <string name="income_record">Income Record</string>
    <string name="expense_record">Expense Record</string>
    <string name="register_an_account">Register an Account</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="account_info">Account Info</string>
    <string name="join_since">Join since</string>
    <string name="log_out">Log out</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
</resources>